fix: map sizes overlapping

--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,7 @@ body,
   flex-direction: column;
   width: 100%;
   max-width: 100%;
+  min-width: 0;
   box-sizing: border-box;
 }
 
